--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./app.js" defer></script>
+    <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="calculator">
+        <div class="screen">
+            
+        </div>
+
+
+        <div class="button">
+            <button data-kkey="8"   class="butt">C</button>
+            <button data-kkey="53"  class="butt">(</button>
+            <button data-kkey="219" class="butt">)</button>
+            <button data-kkey="111" class="butt">/</button>
+            <button data-kkey="103" class="butt">7</button>
+            <button data-kkey="104" class="butt">8</button>
+            <button data-kkey="105" class="butt">9</button>
+            <button data-kkey="106" class="butt">*</button>
+            <button data-kkey="100" class="butt">4</button>
+            <button data-kkey="101" class="butt">5</button>
+            <button data-kkey="102" class="butt">6</button>
+            <button data-kkey="109" class="butt">-</button>
+            <button data-kkey="97"  class="butt">1</button>
+            <button data-kkey="98"  class="butt">2</button>
+            <button data-kkey="99"  class="butt">3</button>
+            <button data-kkey="107" class="butt">+</button>
+            <button data-kkey="96"  class="butt">0</button>
+            <button data-kkey="110" class="butt">.</button>
+            <button data-kkey="13"  class="butt">=</button>
+        </div>
+    </div>
 </body>
 </html>
