Little update and comment the code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="calculator">
+    <div class="calculator" id="test">
         <div class="screen">
             
         </div>
@@ -35,6 +35,30 @@
             <button data-kkey="110" class="butt">.</button>
             <button data-kkey="13"  class="butt">=</button>
         </div>
+
+
+        <!--<div class="button">
+            <button class="butt">C</button>
+            <button class="butt">(</button>
+            <button class="butt">)</button>
+            <button class="butt">/</button>
+            <button class="butt">7</button>
+            <button class="butt">8</button>
+            <button class="butt">9</button>
+            <button class="butt">*</button>
+            <button class="butt">4</button>
+            <button class="butt">5</button>
+            <button class="butt">6</button>
+            <button class="butt">-</button>
+            <button class="butt">1</button>
+            <button class="butt">2</button>
+            <button class="butt">3</button>
+            <button class="butt">+</button>
+            <button class="butt">0</button>
+            <button class="butt">.</button>
+            <button class="butt">=</button>
+        </div>-->
     </div>
 </body>
 </html>
+
